  25 Sep 2016;  <bene@gentoo.org> dehydrated-0.3.1.ebuild:
  app-crypt/dehydrated:
