@@ -1,3 +1,5 @@
   25 Sep 2016;  <bene@gentoo.org> dehydrated-0.3.1.ebuild:
-  app-crypt/dehydrated:
+  app-crypt/dehydrated: install config example
 
+  25 Sep 2016;  <bene@gentoo.org> dehydrated-0.3.1.ebuild:
+  app-crypt/dehydrated:
